# DE-test

./: Data Xploration.ipynb  ETL_README.md  Makefile  README.md  pyproject.toml
.ipynb_checkpoints/: Data Xploration-checkpoint.ipynb
cooking_etl/: main.py
cooking_etl/src/: runner.py
cooking_etl/tests/: conftest.py
dag/: recipe_run.py
output/: .part-00000-b5f0dca1-e9ac-48ef-ab6f-b4d90e933d4b-c000.csv.crc  part-00000-b5f0dca1-e9ac-48ef-ab6f-b4d90e933d4b-c000.csv
pre_processed/year=2003/: .part-00000-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  .part-00001-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  part-00000-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet  part-00001-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet
pre_processed/year=2004/: .part-00000-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  .part-00001-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  part-00000-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet  part-00001-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet
pre_processed/year=2005/: .part-00000-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  .part-00001-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  part-00000-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet  part-00001-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet
pre_processed/year=2006/: .part-00000-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  .part-00001-b5a73328-ad5e-46dc-abae-eb2832aa8541.c000.snappy.parquet.crc  (+2 more)
(+44 files in other folders)
