[tool.poetry]
name = "sanniheruwala-data-engineering-test"
version = "0.1.0"
description = ""
authors = ["Sanni Heruwala"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "3.1.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
